--- a/about.html
+++ b/about.html
@@ -24,7 +24,9 @@
             
 
         <main>
-       
+           <p>
+            This is the about page.
+           </p>
         </main>
 
         <footer>
